feat: add update env api
