# server/docs/swagger.json
@@ -103,6 +103,25 @@
                 }
             }
         },
+        "/deployments/:id/env": {
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Deployments"
+                ],
+                "summary": "Update Deployment Env",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/deployments/{id}": {
             "get": {
                 "consumes": [
